--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,10 @@
 	  	<groupId>sourceninja</groupId>
 	  	<artifactId>sourceninja-maven-plugin</artifactId>
         <version>0.1.0</version>
+		<configuration>
+		  <id>foo</id>
+		  <token>bar</token>
+		</configuration>
       </plugin>
 
 	  <plugin>
