--- a/pom.xml
+++ b/pom.xml
@@ -10,16 +10,16 @@
   <groupId>com.sourceninja</groupId>
   <artifactId>sourceninja-maven-plugin</artifactId>
   <name>sourceninja-maven-plugin</name>
-  <version>0.1.0</version>
+  <version>0.1.0-SNAPSHOT</version>
   <inceptionYear>2012</inceptionYear>
   <description>A plugin which enables your Maven project to be tracked by SourceNinja</description>
   <url>https://github.com/SourceNinja/sourceninja-maven</url>
   <packaging>maven-plugin</packaging>
 
   <scm>
-    <connection>scm:git:git://github.com/SourceNinja/sourceninja-maven.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com:SourceNinja/sourceninja-maven.git</developerConnection>
-    <url>https://github.com/SourceNinja/sourceninja-maven</url>
+    <connection>scm:git:git@github.com:SourceNinja/sourceninja-maven.git</connection>
+    <developerConnection>scm:git:git@github.com:SourceNinja/sourceninja-maven.git</developerConnection>
+    <url>git@github.com:SourceNinja/sourceninja-maven.git</url>
   </scm>
 
   <licenses>
@@ -91,45 +91,54 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>2.2.2</version>
         <configuration>
-          <autoVersionSubmodules>true</autoVersionSubmodules>
           <localCheckout>true</localCheckout>
           <pushChanges>false</pushChanges>
         </configuration>
+      </plugin>
+
+	  <plugin>
+		<artifactId>maven-source-plugin</artifactId>
+		<version>2.1.2</version>
+		<executions>
+		  <execution>
+			<id>sources-jar</id>
+			<phase>package</phase>
+			<goals>
+			  <goal>jar</goal>
+			</goals>
+		  </execution>
+		</executions>
+      </plugin>
+
+	  <plugin>
+		<!-- disable the Surefire testing plugin -->
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<version>2.6</version>
+		<configuration>
+		  <skip>true</skip>
+		</configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+		<version>1.4</version>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
     </plugins>
   </build>
 
   <profiles>
-    <profile>
-      <id>sonatype-release-profile-extension</id>
-      <activation>
-        <property>
-          <name>performRelease</name>
-          <value>true</value>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-gpg-plugin</artifactId>
-            <configuration>
-              <keyName>${gpg.keyname}</keyName>
-              <passphrase>${gpg.passphrase}</passphrase>
-            </configuration>
-            <executions>
-              <execution>
-                <id>sign-artifacts</id>
-                <phase>verify</phase>
-                <goals>
-                  <goal>sign</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
     <profile>
       <id>sonatype-repo-deploy</id>
       <activation>
