--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
   <packaging>maven-plugin</packaging>
 
   <scm>
-    <connection>scm:git:git@github.com:SourceNinja/sourceninja-maven.git</connection>
-    <developerConnection>scm:git:git@github.com:SourceNinja/sourceninja-maven.git</developerConnection>
-    <url>git@github.com:SourceNinja/sourceninja-maven.git</url>
+	<connection>scm:git:git://github.com/SourceNinja/sourceninja-maven.git</connection>
+	<developerConnection>scm:git:ssh://git@github.com:SourceNinja/sourceninja-maven.git</developerConnection>
+	<url>https://github.com/SourceNinja/sourceninja-maven</url>
   </scm>
 
   <licenses>
