moved javadoc jar creation to compile goal

--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
         <executions>
           <execution><!-- Run our version calculation script -->
             <id>Generate Empty Javadoc</id>
-            <phase>package</phase>
+            <phase>compile</phase>
             <goals>
               <goal>exec</goal>
             </goals>
