--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,7 @@
 	  <plugin>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-javadoc-plugin</artifactId>
-		<version>maven-javadoc-plugin</version>
+		<version>2.8.1</version>
 		<executions>
 		  <execution>
 			<id>attach-javadocs</id>
